--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </ul>
         <div>
           <ul>
-            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
         </div>
       </nav>
@@ -54,9 +54,9 @@
       <div>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./img/img1.jpg" alt="" width="300px" /></li>
-          <li><img src="./img/img2.jpg" alt="" width="300px" /></li>
-          <li><img src="./img/img3.jpg" alt="" width="300px" /></li>
+          <li><img src="./img/img1.jpg" alt="" width="300" /></li>
+          <li><img src="./img/img2.jpg" alt="" width="300" /></li>
+          <li><img src="./img/img3.jpg" alt="" width="300" /></li>
         </ul>
       </div>
       <div>
@@ -64,25 +64,25 @@
         <ul>
           <li>
             <figure>
-              <p><img src="./img/демяненко.jpg" alt="" width="300px" /></p>
+              <p><img src="./img/демяненко.jpg" alt="" width="300" /></p>
               <figcaption><b>Игорь Демьяненко</b>Product Designer</figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <p><img src="./img/репина.jpg" alt="" width="300px" /></p>
+              <p><img src="./img/репина.jpg" alt="" width="300" /></p>
               <figcaption><b>Ольга Репина</b>Frontend Developer</figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <p><img src="./img/тарасов.jpg" alt="" width="300px" /></p>
+              <p><img src="./img/тарасов.jpg" alt="" width="300" /></p>
               <figcaption><b>Николай Тарасов</b>Marketing</figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <p><img src="./img/ермаков.jpg" alt="" width="300px" /></p>
+              <p><img src="./img/ермаков.jpg" alt="" width="300" /></p>
               <figcaption><b>Михаил Ермаков</b>UI Designer</figcaption>
             </figure>
           </li>
@@ -102,8 +102,8 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="info@example.com">info@example.com</a></li>
-          <li><a href="+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </footer>
