--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Эффективные решения для вашего бизнеса</h1>
         <a href="">Заказать услугу</a>
       </div>
-      <div>
+      <section>
         <ul>
           <li>
             <b>Внимание к деталям </b>Идейные соображения, а также начало
@@ -50,44 +50,58 @@
             очевидна, что реализация плановых заданий.
           </li>
         </ul>
-      </div>
-      <div>
+      </section>
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./img/img1.jpg" alt="" width="300" /></li>
-          <li><img src="./img/img2.jpg" alt="" width="300" /></li>
-          <li><img src="./img/img3.jpg" alt="" width="300" /></li>
+          <li><img src="./img/img1.jpg" alt="nootbook" width="300" /></li>
+          <li><img src="./img/img2.jpg" alt="telephone" width="300" /></li>
+          <li><img src="./img/img3.jpg" alt="планшет" width="300" /></li>
         </ul>
-      </div>
-      <div>
+      </section>
+      <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
             <figure>
-              <p><img src="./img/демяненко.jpg" alt="" width="300" /></p>
+              <p>
+                <img
+                  src="./img/демяненко.jpg"
+                  alt="Product Designer"
+                  width="300"
+                />
+              </p>
               <figcaption><b>Игорь Демьяненко</b>Product Designer</figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <p><img src="./img/репина.jpg" alt="" width="300" /></p>
+              <p>
+                <img
+                  src="./img/репина.jpg"
+                  alt="Frontend Developer"
+                  width="300"
+                />
+              </p>
               <figcaption><b>Ольга Репина</b>Frontend Developer</figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <p><img src="./img/тарасов.jpg" alt="" width="300" /></p>
+              <p><img src="./img/тарасов.jpg" alt="Marketing" width="300" /></p>
               <figcaption><b>Николай Тарасов</b>Marketing</figcaption>
             </figure>
           </li>
           <li>
             <figure>
-              <p><img src="./img/ермаков.jpg" alt="" width="300" /></p>
+              <p>
+                <img src="./img/ермаков.jpg" alt="UI Designer" width="300" />
+              </p>
               <figcaption><b>Михаил Ермаков</b>UI Designer</figcaption>
             </figure>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer>
       <div>
@@ -98,9 +112,11 @@
             /></a>
           </li>
           <li>
-            <a href="https://goo.gl/maps/JhmzxavkcnmUYLKR9"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
+            <address>
+              <a href="https://goo.gl/maps/JhmzxavkcnmUYLKR9"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </address>
           </li>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
