Смена формата логотипа

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--header-->
     <header>
       <div>
-        <a href="https://вебстудия.net/"><img src="./img/logo.jpg" alt="" /></a>
+        <a href="https://вебстудия.net/"><img src="./img/logo.svg" alt="" /></a>
       </div>
       <!--В  задании указано что жолжна быть рабочая ссылка-->
       <nav>
@@ -108,7 +108,7 @@
         <ul>
           <li>
             <a href="https://вебстудия.net/"
-              ><img src="./img/logo.jpg" alt=""
+              ><img src="./img/logo.svg" alt="logo"
             /></a>
           </li>
           <li>
