--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--header-->
     <header>
       <div>
-        <a href="https://вебстудия.net/"><img src="./img/logo.svg" alt="" /></a>
+        <a href="https://вебстудия.net/">WebStudio</a>
       </div>
       <!--В  задании указано что жолжна быть рабочая ссылка-->
       <nav>
@@ -107,9 +107,7 @@
       <address>
         <ul>
           <li>
-            <a href="https://вебстудия.net/"
-              ><img src="./img/logo.svg" alt="logo"
-            /></a>
+            <a href="https://вебстудия.net/">WebStudio</a>
           </li>
           <li>
             <a href="https://goo.gl/maps/JhmzxavkcnmUYLKR9"
