проверка git slack

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!--header-->
     <header>
-      <div>
+      <div id="1">
         <a href="https://вебстудия.net/">WebStudio</a>
       </div>
       <!--В  задании указано что жолжна быть рабочая ссылка-->
