--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <body>
     <!--header-->
     <header>
-      <div>
+      <div
+        id="slack
+      "
+      >
         <a href="https://вебстудия.net/">WebStudio</a>
       </div>
       <!--В  задании указано что жолжна быть рабочая ссылка-->
