--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <body>
     <!--header-->
     <header>
-      <div
-        id="slack
-      "
-      >
+      <div>
         <a href="https://вебстудия.net/">WebStudio</a>
       </div>
       <!--В  задании указано что жолжна быть рабочая ссылка-->
