--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main>
-      <div id="marusia">
+      <div>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <a href="">Заказать услугу</a>
       </div>
