--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 id="1234">Чем мы занимаемся</h2>
         <ul>
           <li><img src="./img/img1.jpg" alt="nootbook" width="300" /></li>
           <li><img src="./img/img2.jpg" alt="telephone" width="300" /></li>
